Fix css variables support on IE

--- a/client/components/Availabilities/styles.scss
+++ b/client/components/Availabilities/styles.scss
@@ -1,8 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700");
 
-:root {
-    --bookingWidgetPrimaryColor: #f3715c;
-}
 * {
     box-sizing: border-box;
     font-family: "Montserrat", sans-serif;
@@ -34,6 +31,7 @@
     &__sidebar {
         width: 25%;
         padding: 0 20px;
+        background-color: #f3715c;
         background-color: var(--bookingWidgetPrimaryColor);
         border-radius: 5px;
         display: flex;
@@ -132,6 +130,7 @@
             justify-content: center;
             flex-direction: column;
             font-size: 12px;
+            color: #f3715c;
             color: var(--bookingWidgetPrimaryColor);
             text-align: center;
             text-transform: uppercase;
@@ -152,6 +151,7 @@
                 display: block;
             }
             &:hover {
+                color: #f3715c;
                 color: var(--bookingWidgetPrimaryColor);
             }
         }
@@ -204,6 +204,7 @@
             cursor: pointer;
             flex-direction: row;
             i {
+                color: #f3715c;
                 color: var(--bookingWidgetPrimaryColor);
             }
         }
@@ -277,6 +278,7 @@
         &_btn {
             position: absolute;
             font-size: 18px;
+            color: #f3715c;
             color: var(--bookingWidgetPrimaryColor);
             cursor: pointer;
             background: none;
@@ -352,6 +354,7 @@
             background-color: #e6e6e6 !important;
         }
         &_selected {
+            background-color: #f3715c !important;
             background-color: var(--bookingWidgetPrimaryColor) !important;
             filter: grayscale(80%);
         }
@@ -366,6 +369,7 @@
             text-align: center;
             text-transform: lowercase;
             list-style: none;
+            background-color: #f3715c;
             background-color: var(--bookingWidgetPrimaryColor);
             flex-grow: 1;
         }
@@ -418,7 +422,8 @@
             font-size: 8px;
             padding: 6px 20px;
             border: none;
-            background: var(--bookingWidgetPrimaryColor);
+            background-color: #f3715c;
+            background-color: var(--bookingWidgetPrimaryColor);
             cursor: pointer;
             right: 0;
             top: 50%;
